--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "next": "15.2.4",
     "next-themes": "latest",
     "nodemailer": "^7.0.5",
+    "razorpay": "^2.9.6",
     "react": "^19",
     "react-day-picker": "latest",
     "react-dom": "^19",
